# Forecasting-Learning

./: .gitignore  ARIMA_testing.ipynb  README.md  pyproject.toml
notebook/: ARIMA_testing.ipynb  Prophet_testing.ipynb
quickstart/: 01_arima.py  02_sarima.py  03_prophet.py  04_ets_holtwinters.py  05_lstm.py  06_xgboost_timeseries.py  07_var.py  08_theta.py  forecasting_guide.md
