[project]
name = "forecasting-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "prophet>=1.3.0",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "xgboost>=3.2.0",
]
